--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ addons:
     - shellcheck
 
 script:
- - bash -c 'shopt -s globstar; shellcheck **/*.{sh,bash}'
+ - bash -c 'shopt -s globstar; shellcheck **/*.{sh}'
 
 matrix:
   fast_finish: true
